    Alierak.
 -- Fixed cases of look and @idesc interaction (Issue 45).
 -- Updated 'wizhelp @attribute' for clarity (Issue 190).
 -- Removed 'Attr. Cache' row from @list hashstats report for
    memory-based build (Issue 226).
 -- page, say, @pemit, and pose with /noeval would strip curly braces
    (Issue 225).
 -- Version and error strings containing the label 'Win32' were used
    in Win64 builds of TinyMUX (Issue 228).
 -- Fixed potential lbuf leak in munge() (Issue 227).  Found and fixed
    by Alierak.
 -- Fixed lbuf leak when @hook attribute is empty (Issue 229).  Found
    and fixed by Alierak.
 -- Fixed build error in version.cpp (Issue 230).


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~

 -- In MEMORY_BASED, avoid malloc() call each time an attribute is
    added to an object.
 -- Optimize atr_add_raw_LEN() to reduce Firan load time from 40 seconds
    to 15 seconds (which includes firan.db, mail.db, and comsys.db).
    This translates to something upward of 28 MB/s.
 -- Optimize do_comsystem() ability to recognize what is not an alias.
    Alierak.
 -- Added reference counting to global registers which should improve
    performance and greatly reduce memory usage for games which use the
    queue heavily.
 -- Issue 207: Maintain message length in mail bag to avoid touching
    mail body.
 -- Issue 201: Trim priority queue data structures during @dbck to save
    memory.


Cosmetic Changes:
~~~~~~~~~~~~~~~~
 -- Increased width of certain columns in @list hashstats (Requests,
    Hits, and Checks) and @list allocations (Allocs).


Miscellaneous:
~~~~~~~~~~~~~
 -- Add mux_fopen() utility function to replace direct use of fopen().
 -- Updated config.guess, config.sub, and configure to later versions.
 -- Updated to autoconf 2.61.
 -- Refer to tinymux.org instead of tinymux.com.
 -- Added SQL readme (Issue 47).
 -- Updated to doxygen 1.5.1.
 -- Freshened ATTACK, BACKUPS, BETA, CREDITS, NOTES, README, and
    readme.txt.